--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Formados em assistência técnica para ajudar em sua propriedade</h2>
     <link rel="stylesheet" href="style.css">
     
-    <p>Vamos conectar toda a região centro do estado com notícias, tendências, costumes, cultura e muito mais! </p>
+    <p>Vamos conectar toda a região centro do estado com acompanhamentos, tendências, tecnologia e muito mais! </p>
 
     <p>Nós fazemos parte do Edutech, um grupo de professores totalmente conectados.: programar!</p>
 
