--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <p>Nós fazemos parte do Edutech, um grupo de professores totalmente conectados.: programar!</p>
 
-     <p>Participantes do Grupo: Manoel Vitor Pinheiro (Professor), Eduarda (Ministrante do curso), Professores e professoras (SEED)</p>
+    <p>SEED</p>
 
-     <p> <span> MAIS INFORMAÇÕES: Acompanhem nossas redes socias </span> </p>
+     <p> <span> MAIS INFORMAÇÕES: Acompanhem nossas redes socias @gabrielstipp_ @pecuariadtipp @gustavogu </span> </p>
      <img ID = "imagem" src="mobile.png"> 
      <img ID="imagem-2" src="logomarcanova.png">    
   </body>
